tests/unit-fail-compilation/oldStyleParams.c.ref
oldStyleParams.c:2:1: error: Incomplete parameter type in function definition.
  Constraint violation (CV-FD3).
   see C11 section 6.7.6.3:4 http://rvdoc.org/C11/6.7.6.3
   see CERT-C section MSC40-C http://rvdoc.org/CERT-C/MSC40-C
Translation failed (config dumped). Run kcc -d -Werror -Wfatal-errors oldStyleParams.c to see commands run.
