tests/unit-fail-compilation/oldStyleParams.c
struct foo;
void bar(x)
      struct foo x;
{
      //do stuff
}

int main(void) { }
